# Epitech_MSC2

./: README.md
PictsManager/: Makefile  docker-compose.yml
PictsManager/backend/: Dockerfile  Makefile  pom.xml
PictsManager/documentation/: Documentation_technique.docx
PictsManager/frontend/: local.properties  settings.gradle
PictsManager/frontend/app/: build.gradle
PictsManager/frontend/gradle/wrapper/: gradle-wrapper.properties
T-AIA-902/T-AIA-902_2022_1/: .gitignore  README.md
T-AIA-902/T-AIA-902_2022_1/Bruteforce/: main.py
T-AIA-902/T-AIA-902_2022_1/bootstrap/T-AIA-902-group1-gregory-koenig-bootstrap/: README.md  pyproject.toml
T-AIA-902/T-AIA-902_2022_1/bootstrap/T-AIA-902-group1-gregory-koenig-bootstrap/T-AIA-902-group1/: deep_q-learning.py  q-learning_with_train.py  q-learning_without_train.py  sarsa.py
T-AIA-902/T-AIA-902_2022_1/bootstrap/T-AIA-902-group1-gregory-koenig-bootstrap/data/: q-learning.pkl  sarsa.pkl
T-AIA-902/T-AIA-902_2022_1/bootstrap_Richard/DQN/: DQN.py  DQNV2.py
T-AIA-902/T-AIA-902_2022_1/bootstrap_pierre/: sarsa.py
T-DAT-901_msc2022_group-16/: .gitignore  Makefile  README.md  main.py  requirements.txt
recommender_2022_16/: main.py  recommendation.csv
recommender_2022_16/Documentation/: recommencer_system.docx
recommender_2022_16/notebook/: T_DAT_901_msc2022_group_16.ipynb
tor_2022_group-12/: back.py  extract_locations.py  requirements.txt  travel.py
tor_2022_group-12/dataset/: test_intent_dataset.csv  timetables.csv  timetables2.csv  timetables_test.csv
tor_2022_group-12/dataset/data_sncf/: txt
(+62 files in other folders)
