[tool.poetry]
name = "t-aia-902-group1-bootstrap"
version = "0.1.0"
description = ""
authors = ["gregory-koenig <gregory.koenig@epitech.eu>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
gym = "^0.21.0"
numpy = "^1.22.4"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
